# Reminder-app

./: .gitignore  README.md  hello.py  pyproject.toml
backend/: .coverage  manage.py  pyproject.toml
backend/reminder_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/reminder_backend_conf/: apps.py  settings.py  urls.py  views.py
backend/reminders/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/reminders/migrations/: 0001_initial.py  0002_delete_reminder.py  0003_initial.py  0004_customuser_alter_reminder_user.py  0005_alter_reminder_user_delete_customuser.py
frontend/: README.md  package-lock.json  package.json
frontend/auth-nextjs-themed/: index.html  package.json
frontend/auth-nextjs-themed/src/: App.tsx  SessionContext.ts  main.tsx
frontend/auth-nextjs-themed/src/firebase/: auth.ts  firebaseConfig.ts
frontend/auth-nextjs-themed/src/layouts/: dashboard.tsx
frontend/auth-nextjs-themed/src/pages/: index.tsx  signin.tsx
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AddReminder.jsx  Calendar.css  CalendarPage.jsx  EditReminder.jsx  ErrorBoundary.jsx  HeaderMain.jsx  Modal.css  RemindersPage.jsx  Test.jsx  signin.jsx
frontend/src/layouts/: Dashboard.jsx  SignInPage.jsx
frontend/src/pages/: Dashboard.jsx  ProtectedRoute.jsx  SignInPage.css  SignInPage.jsx  SignupPage.jsx
frontend/src/services/: api.jsx
frontend/src/utils/: notificationManager.jsx
reminder/: asgi.py  settings.py  urls.py  wsgi.py
